# rib-backend

./: .env  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/entities/: book.rs  mod.rs  prelude.rs  privilege.rs  user.rs
migration/: Cargo.toml  rib-db.sql
migration/src/: lib.rs  m20240109_073249_create_table.rs  main.rs
src/: app.rs  init.rs  lib.rs  main.rs  message.rs  state.rs  util.rs
src/book/: crud.rs  mod.rs
src/borrow/: crud.rs  mod.rs
src/error/: init.rs  login.rs  mod.rs  oper.rs
src/user/: crud.rs  mod.rs
tests/: integration_test.rs
